# forge-res

./: .gitignore  .goreleaser.yml  COPYRIGHTS.md  Dockerfile  Pipfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
aws/CloudFormation/ApiKey/: apiKey.go  apiKey_test.go  api_key.md  api_key.py  test_api_key.py
aws/CloudFormation/CogCondPreAuthSettings/: cogCondPreAuthSettings.go  cogCondPreAuthSettings.md  cogCondPreAuthSettings_test.go  cog_cond_pre_auth_settings.py  test_cog_cond_pre_auth_settings.py
aws/CloudFormation/CognitoIdentityProvider/: cognitoIdentityProvider.go  cognitoIdentityProvider_test.go  (+2 more)
aws/acm/: acm.go  acm_test.go
aws/common/: calc.go  calc.py  calc_test.go  cfn.py  cloudformation.go  common.go  naming.go  naming.py  naming_test.go  schema.py  ssm.py  test_calc.py
aws/testCommon/: testCommon.go
bootstrap/: README.md  bootstrap.sh  bootstrap.yaml  buildspec.yaml  dev.sh
bootstrap/templates/: ForgeBootstrap.yaml  ForgeBuckets.yaml  ForgeIam.yaml  ForgeLogsMaintenance.yaml  ForgeResources.yaml  ForgeResourcesTest.yaml
codesmith/common/: cfn.py  common.go  common.py  common_test.go  naming.go  naming.py  schema.py  ssm.py  test_calc.py  test_common.py
codesmith/tests/: README.md  bootstrap-tests.sh  cfn.py  test_integration.py
forge-cli/: Readme.md  forge-application.yaml
templates/: dnscert.yaml
templates/postgresInstance/: .goreleaser.yml  README.md  go.mod  go.sum  iamPassword.sh  postgresInstance.sh  postgresInstance.yaml
templates/tests/: AcmCertificate.yaml  S3ReleaseCleanup.yaml
(+105 files in other folders)
